ghc-4335c07/testsuite/tests/polykinds/T11466.stderr

T11466.hs:15:10: error:
    • Illegal implicit parameter ‘?x::Int’
    • In the context: Bla
      While checking an instance declaration
      In the instance declaration for ‘Eq T’
